eventstorenetes/es/templates/ingress/ingress-rules.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-rules
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    nginx.org/websocket-services: "ws-svc"
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: DELETE, GET, POST, PUT, OPTIONS, HEAD
    nginx.ingress.kubernetes.io/cors-allow-origin: '*'
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
  - host: web.1879a2a66e4247f68450.westeurope.aksapp.io
    http:
      paths:
      - backend:
          serviceName: es
          servicePort: 2113
        path: /
  - host: web2.1879a2a66e4247f68450.westeurope.aksapp.io
    http:
      paths:
      - backend:
          serviceName: es2
          servicePort: 2123
        path: /
  - host: web3.1879a2a66e4247f68450.westeurope.aksapp.io
    http:
      paths:
      - backend:
          serviceName: es3
          servicePort: 2133
        path: /
  - host: stream.1879a2a66e4247f68450.westeurope.aksapp.io
    http:
      paths:
      - backend:
          serviceName: es
          servicePort: 1113
        path: /
